Feature: 카카오 로그인 진행중

--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "archieve_peak_web",
     "slug": "archieve_peak_web",
     "version": "1.0.0",
+    "platforms": ["ios", "android", "web"],
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
